--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -120,12 +120,42 @@
     <%= render 'sharing' %>
   </section>
 </article>
-<!--<article class="retractable start-hidden">
-  <h1 class="noselect">A Common Question?</h1>
+<article class="retractable start-hidden">
+  <h1 class="noselect">How will the money be used?</h1>
   <section>
-    <p>An answer to your common question</p>
+
   </section>
-</article>-->
+</article>
+<article class="retractable start-hidden">
+  <h1 class="noselect">Hasn't there already been research done on underride guards?</h1>
+  <section>
+    <p>Although there has already been a lot of research done on underride prevention, there has not been readily available crash testing information to prove its viability or convince government regulators and the trucking industry to move forward with these measures to prevent unnecessary deaths and horrific injuries.</p>
+<p>Furthermore, we want to show that this can be done in an affordable manner and that it is a priority to this nation to pay for the best possible protection for pedestrians, cyclists, and motorists on the road.</p>
+<p>We hope that the money we raise can provide unquestionable proof that more can be done than currently is and that rear guards, side guards, and front protection on all trucks will become standard. When we found out after losing AnnaLeah and Mary that better protection was possible, our relentless question has been, “If it can be done, why is it not being done?”<p>
+<p>For detailed information about underride guards, <a href="http://annaleahmary.com/underride-guards/">there are many articles on annaleahmary.com</a></p>
+  </section>
+</article>
+<article class="retractable start-hidden">
+  <h1 class="noselect">Will my donation be tax deductible?</h1>
+  <section>
+    <p>AnnaLeah &amp; Mary for Truck Safety is incorporated in North Carolina as a non-profit corporation, as of June 26, 2015. We have applied for tax-exempt status (Form 1023) with the IRS (September 4, 2015). This had to be done within 27 months of organizing.</p>
+<p>Meanwhile, we have been told by the IRS that we can operate as a 501(c)(3) organization. We meet all of the requirements and have been told that we can communicate that we are eligible to receive contributions that may be tax deductible for the donor. That is the wording which we are told to use and will be the same wording which we would need to use when we actually get an approval letter from IRS. We cannot guarantee that your particular donation will be deductible because that depends on your tax return details.</p>
+<p>However, if you donate to AnnaLeah &amp; Mary for Truck Safety, then we will email you a receipt which you can use when you do your taxes. We have organized AL&amp;MFTS to meet the requirements of a 501(c)(3) organization and plan to use all funds received accordingly.</p>
+  </section>
+</article>
+<article class="retractable start-hidden">
+  <h1 class="noselect">Other Question?</h1>
+  <section>
+
+  </section>
+</article>
+<article class="retractable start-hidden">
+  <h1 class="noselect">Other Question?</h1>
+  <section>
+
+  </section>
+</article>
+
 <article class="retractable all-hidden entire-retract" id="contact-us">
   <section>
     <h1 class="noselect">Contact Information</h1>
