--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -293,6 +293,11 @@ article.retractable h1:active {
   text-shadow: 0px 0px 5px #444;
 }
 
+article.retractable.start-hidden h1.noselect {
+  font-size: 16pt;
+  line-height: 1.1em;
+}
+
 /* Slideshows */
 
 main article.images {
