--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,6 +37,7 @@
             %span.donation-donors 000
             people
       = render "content"
+      = render "disclaimers"
     %footer
       %p
         %a#reveal-disclaimer{ href: "#disclaimer", title: "Show Disclaimer" }
