--- a/app/views/givers/_additional.html.erb
+++ b/app/views/givers/_additional.html.erb
@@ -1,4 +1,9 @@
-<article>
+<article class="nav-button all-hidden" id="reveal-info">
+  <section>
+    <h1 class="noselect">More Information</h1>
+  </section>
+</article>
+<article class="content-info all-hidden entire-retract" id="info">
   <section>
     <h2>501(c)3 Status</h2>
     <p>We are registered with the state of North Carolina as a non-profit organization and waiting for verification from the IRS for our 501(c)3 status. A copy of our 501(c)3 verification will be added to this website as soon as we receive it from the IRS. You will receive a receipt via e-mail for your donations and may be eligible for a tax deduction. </p>
@@ -41,3 +46,11 @@
     <p>Life after the crash was never the same. Instead of it being a time of joy it became a time of mourning. We were blessed by many people, strangers and friends alike. But none of it could change the fact that the girls were gone and we had to figure out how to pick up the pieces of life without them.</p>
   </section>
 </article>
+<article class="nav-button all-hidden" id="conceal-info">
+  <section>
+    <h1 class="noselect">Hide More Information</h1>
+  </section>
+</article>
+<script>
+  pageLoadHideInfo();
+</script>
