--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -21,7 +21,7 @@
   hideThanks();
 </script>
 
-<article>
+<article class="content-primary" id="begin">
   <section>
     <%= image_tag("content/truck_rear_underride_guard_cropped.jpg", alt: "Photo of the rear of a truck from the side, showing the metal bars that form the underride guard at the back of the truck.") %>
 
@@ -39,18 +39,18 @@
     </blockquote>
   </section>
 </article>
-<article class="images">
+<article class="images content-primary">
   <section>
     <%= image_tag("content/car_under_truck_800.jpg", alt: "Photo of our blue Ford Crown Victoria car, with the rear of the car forced under the back of the truck trailer from the collision. Most of the car is nearly unrecognizable from the damage There is a sheet covering part of the car. There is blood on the sheet.") %>
    <p class="caption">Our car after the crash</p>
   </section>
 </article>
-<article>
+<article class="content-primary">
   <section>
     <p>In 2013, our family found that out the hard way. I was traveling with my 3 youngest children when we were struck from behind by a semi-truck. It spun us around and hit us a second time pushing our car under the truck in front of us.</p>
   </section>
 </article>
-<article class="images slideshow">
+<article class="images slideshow content-primary">
   <section class="slideshow" id="slideshow_test">
     <div data-u="slides" class="slideshow">
       <div><%= image_tag("content/annaleah_and_mary_photo_1c.jpg", alt: "Photo of AnnaLeah and Mary on a seesaw made out of wagon wheels. Mary is wearing a bright pink jacket and AnnaLeah is wearing a purple sweater. They are smiling.") %></div>
@@ -59,22 +59,22 @@
     </div>
   </section>
 </article>
-<article>
+<article class="content-primary">
   <section>
     <p>AnnaLeah (17) and Mary (13) were in the backseat when the rear of the car was pushed under the truck. Both of them died. AnnaLeah wanted to be a writer and Mary wanted to be famous, neither of them got to see their dreams come true.</p>
   </section>
 </article>
-<article class="video">
+<article class="video content-primary">
   <iframe width="420" height="315" src="https://www.youtube.com/embed/dGXR02wkjvM" frameborder="0" allowfullscreen></iframe>
 </article>
-<article>
+<article class="content-primary">
   <section>
     <h1>Lives CAN BE Saved!</h1>
     <p>Last year our family was successful in collecting and delivering more than 11,000 signatures in a petition to the Department of Transportation to make changes. Progress is being made toward stricter laws, but the industry needs better options.</p>
     <p><strong><em>Research must be done to offer the trucking industry affordable technologies that protect our families on the road.</em></strong></p>
     </section>
 </article>
-<article class="contains-video">
+<article class="contains-video content-primary">
   <section>
     <p>Our family started <strong>AnnaLeah and Mary for Truck Safety</strong>, a 501(c)3 non-profit organization, to raise funds for truck safety research. We are starting with underride guards because if the underride guard on the truck in front of us had been strong enough to prevent our car from going under it, AnnaLeah and Mary would be here today.</p>
       <iframe width="420" height="315" src="https://www.youtube.com/embed/m69mxZJ6X9M" frameborder="0" allowfullscreen></iframe>
@@ -93,7 +93,7 @@
     <p>-- a person</p>
   </section>
 </article>-->
-<article>
+<article class="content-primary">
   <section>
     <h1>We Can't Do It Alone<br />We Need YOUR Help!</h1>
     <ul>
@@ -106,7 +106,7 @@
     <%= image_tag("layout/the_karth_family_signiture.png", alt: "(signed) The Karth Family", class: "signiture") %>
   </section>
 </article>
-<article>
+<article class="content-primary">
   <section>
     <p>If you'd like to donate by check, rather than credit card, please make your payments out to:</p>
     <p>AnnaLeah and Mary For Truck Safety<br>
