--- a/app/views/givers/_additional.html.erb
+++ b/app/views/givers/_additional.html.erb
@@ -17,6 +17,7 @@
     <p>We are hoping to raise $200,000. This would allow us to move forward with all of the projects we are currently working on. This includes a major project with Dean Sicking, crash testing Aaron Kiefer’s underride guard, crash testing the underride guard that the Virginia Tech Senior design team is currently working on, and it would help pay for any portion of the Underride Guard Round Table that needs to be covered. A small portion is also likely to be used to cover our operating costs including but not limited to state and federal fees and mailings to potential donors.<p>
     <h3>Dean Sicking </h3>
     <p>The first thing that we have on our list is the project with Dean Sicking. Dean Sicking has already saved lives with his SAFER barrier technology in race tracks by working with NASCAR. He is hoping to take this technology to make improvements to underride guards. The cost for having Dean Sicking and his team complete the research, make a model, and crash test it is $138,000. </p>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/m69mxZJ6X9M" frameborder="0" allowfullscreen></iframe>
     <h3>Aaron Kiefer</h3>
     <p>The work that we have done has actually put us into contact with others working on the underride guards. One such person is Aaron Kiefer who is currently an accident research specialist in North Carolina. He has designed a guard that can be retro fitted onto current truck guards to improve their strength and reduce underride. It will cost $25,000 to crash test his model. </p>
     <h3>Virginia Tech</h3>
