--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -77,7 +77,7 @@
 <article class="contains-video content-primary">
   <section>
     <p>Our family started <strong>AnnaLeah and Mary for Truck Safety</strong>, a 501(c)3 non-profit organization, to raise funds for truck safety research. We are starting with underride guards because if the underride guard on the truck in front of us had been strong enough to prevent our car from going under it, AnnaLeah and Mary would be here today.</p>
-      
+    <p>We are hoping to raise $200,000 to fund the following projects:</p>
     <ul>
       <li>Dean Sicking has saved lives through the SAFER barrier he designed for NASCAR. He is interested in taking this technology and using it in underride guards.</li>
       <li>Other engineers have contacted us over the last year looking to work on underride guards.</li>
