--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -34,7 +34,7 @@
       <li><strong>Death</strong> of family members is a common result to such crashes.</li>
     </ul>
     <blockquote>
-      <p><strong>“It is safer to run into a brick wall then the back of a truck.”</strong></p>
+      <p><strong>“It is safer to run into a brick wall than the back of a truck.”</strong></p>
       <cite>Russ Rader, Insurance Institute for Highway Safety<br>May 5, 2014</cite>
     </blockquote>
   </section>
