Tweaked donation view from people to donations
- Rather than track individual donars tracking by donations instead

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,7 +36,7 @@
           %p
             from
             %span.donation-donors 000
-            people
+            donations
       = render "content"
       = render "additional"
       = render "navigation"
