Updated content per instructions

--- a/app/views/givers/_disclaimers.html.erb
+++ b/app/views/givers/_disclaimers.html.erb
@@ -17,7 +17,7 @@
     <h2>2800 Ridgecrest Dr.</h2>
     <h2>Rocky Mount, NC 27803</h2>
 
-    <p>We are a 501(c)3 non-profit organization. We will not use money from this or any other fund-raising campaign for personal gain. However, we reserve the right to use the funds as we see fit to meet our general purpose of increasing awareness and funding research for truck safety. Therefore funds may be used for, but not limited to specific research projects, awareness campaigns, general overhead costs, mailings, travel and expenses, and for paying for services when donated services can not be obtained. If at any time the organization should hire personnel for any position, funds raised may also be used to pay that person a reasonable wage. If enough money is not raised to fund specific projects listed on this site or in other materials, other projects will be chosen that support the goals of increasing truck safety awareness and truck safety research.</p>
+    <p>We are registered with the state of North Carolina as a non-profit organization and have received verification from the IRS for our 501(c)3 status. You will receive a receipt via e-mail for your donations and may be eligible for a tax deduction.</p>
     <p>Last Updated: September 8, 2015</p>
   </section>
 </article>
