Moved Address to en.yml

--- a/app/views/givers/_main.html.erb
+++ b/app/views/givers/_main.html.erb
@@ -104,8 +104,8 @@
   <section>
     <p>If you'd like to donate by check, rather than credit card, please make your payments out to:</p>
     <p>AnnaLeah and Mary For Truck Safety<br>
-    6325 Lymington Drive<br>
-    Raleigh, NC 27616</p>
+    <%= t :address_1 %><br>
+    <%= t :address_2 %></p>
   </section>
 </article>
 <article>
