updated external links

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -77,7 +77,8 @@
 <article class="contains-video content-primary">
   <section>
     <p>Our family started <strong>AnnaLeah and Mary for Truck Safety</strong>, a 501(c)3 non-profit organization, to raise funds for truck safety research. We are starting with underride guards because if the underride guard on the truck in front of us had been strong enough to prevent our car from going under it, AnnaLeah and Mary would be here today.</p>
-    <p>We are hoping to raise $225,000 to fund underride research and traffic safety projects outlined <a href="http://annaleahmary.com/wordpress/wp-content/uploads/2014/03/ALMFTS-Traffic-Safety-Ombudsman-Project-Proposal.pdf">here</a>.</p>
+    <p>We are hoping to raise $225,000 to fund underride research and traffic safety projects outlined <a href="http://annaleahmary.com/wordpress/wp-content/uploads/2014/03/ALMFTS-Project-Proposal-and-Budget-2017.pdf">here</a>.</p>
+    <p>We are working with crash reconstructionist engineer, Aaron Kiefer, who is developing innovative side guard protection for trucks. See his work <a href="https://www.collisionsafetyconsulting.com/">here</a>.</p>
   </section>
 </article>
 <!--<article>
