--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -278,3 +278,12 @@ textarea {
         page-break-after: avoid;
     }
 }
+
+/* Always set the map height explicitly to define the size of the div
+ * element that contains the map. */
+/* Optional: Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
