--- a/app/views/crash_locations/index.html.erb
+++ b/app/views/crash_locations/index.html.erb
@@ -4,7 +4,7 @@
   <h3 class="title">Interactive Underride Crash Map</h3>
     <div id="map"></div>
     <p class="footnote">
-      If you have more information about these crashes, or information about an underride crash that is not on the map, please send it to: <a href="mailto:underridecrashmap@gmail.com">underridecrashmap@gmail.com</a>
+      If you have more information about these crashes, or information about an underride crash that is not on the map, please send it to: <a href="mailto:underridemap@gmail.com">underridemap@gmail.com</a>
     </p>
     </div>
   </div>
