--- a/app/views/crash_locations/index.html.erb
+++ b/app/views/crash_locations/index.html.erb
@@ -1,6 +1,6 @@
 </head>
-<body>
-  <main>
+<body class="map">
+  <main class="map">
   <h3 class="title">Interactive Underride Crash Map</h3>
     <div id="map"></div>
     <p class="footnote">
