Book instead of lightbulb

--- a/app/views/crash_locations/index.html.erb
+++ b/app/views/crash_locations/index.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-lg-4 text-center">
         <div class="card">
-          <a href="http://annaleahmary.com/2017/11/i-am-a-truck-crash-survivor-mom-of-two-who-died-on-a-mission-to-make-truck-crashes-more-survivable/"><i class="fa fa-lightbulb-o fa-5x" aria-hidden="true"></i></a>
+          <a href="http://annaleahmary.com/2017/11/i-am-a-truck-crash-survivor-mom-of-two-who-died-on-a-mission-to-make-truck-crashes-more-survivable/"><i class="fa fa-book fa-5x" aria-hidden="true"></i></a>
           <h4>Hear the Stories</h4>
         </div>
       </div>
