--- a/app/views/crash_locations/index.html.erb
+++ b/app/views/crash_locations/index.html.erb
@@ -34,10 +34,10 @@
 </body>
 <script>
   function initMap() {
-    var uluru = {lat: -27.363, lng: 131.044};
+    var nowhere = {lat: 39.5000, lng: -98.4842};
     var map = new google.maps.Map(document.getElementById('map'), {
-      zoom: 1,
-      center: uluru
+      zoom: 4,
+      center: nowhere
     });
 
     var locations = [];
